fixed alignment issues in article and section portions

--- a/style.css
+++ b/style.css
@@ -7,13 +7,26 @@ body {
     text-align: center; 
 }
 
-header, nav, section, aside, footer {
-    background: #ebebeb;
-}
+
 header {
     padding: 30px;
     margin-bottom: 10px;
+    background: #ebebeb;
 }
+
+nav {
+    margin-bottom: 20px;
+    padding: 30px;  
+    background: #ebebeb;  
+}
+
+section {
+    width: 495px;
+    float: left;
+    padding-top: 30px;
+    background: #ebebeb;
+}
+
 article {
     color: #ebebeb;
     background: #777;
@@ -21,12 +34,8 @@ article {
     margin: 10px;
     margin-top: 20px;
     padding-bottom: 10px;
+}
 
-}
-nav {
-    margin-bottom: 20px;
-    padding: 30px;
-}
 h1, p {
     color: #777;
     background: #ebebeb;
@@ -34,25 +43,29 @@ h1, p {
     width: 90%;
     margin-left: 15px;
 }
-section {
-    width: 495px;
-    float: left;
-    padding-top: 30px;
-}
+
 aside {
     float: right;
     width: 445px;
-    height: 240px;
     padding-top: 30px;
+    background: #ebebeb;
+    height: 240px;
 }
+
 footer {
     padding: 30px;
     margin-top: 20px;
+    background: #ebebeb;
 }
 .clearfix::after {
     content: "";
     display: block;
     clear: both;
 }
-p { margin-bottom: 10px;
+p { 
+    margin-bottom: 10px;
 }
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
